Fix spacing in mene, closes #11

--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -2692,13 +2692,23 @@ form > button.icon-button {
   border-color: transparent transparent #f5f5f5 transparent;
 }
 
+.sidebar .tooltip > span.tooltip-text {
+  top: 0.5rem;
+  left: 3rem;
+  right: -9rem;
+}
+
+.sidebar .tooltip > span.tooltip-text::after {
+  display: none;
+}
+
 @media (max-width: 800px) {
   nav .tooltip > span.tooltip-text {
     visibility: visible;
     opacity: 1;
     top: 0;
     bottom: 0;
-    left: 3rem;
+    left: 4rem;
     right: auto;
     padding: 0.5rem 0.5rem;
     text-align: left;
@@ -2706,6 +2716,10 @@ form > button.icon-button {
     line-height: 1.6rem;
     background-color: #ffffff;
     color: #000000;
+  }
+
+  .sidebar .tooltip > span.tooltip-text {
+    left: 4rem;
   }
 
   .dark nav .tooltip > span.tooltip-text {
@@ -2721,16 +2735,6 @@ form > button.icon-button {
     visibility: hidden;
   }
 }
-.sidebar .tooltip > span.tooltip-text {
-  top: 0.5rem;
-  left: 3rem;
-  right: -9rem;
-}
-
-.sidebar .tooltip > span.tooltip-text::after {
-  display: none;
-}
-
 header {
   width: 100%;
   margin: 0 auto;
